--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <main>
       <section
         id="contact-section"
-        class="py-24 opacity-0 transform translate-y-8 transition-opacity transition-transform duration-1000 ease-out"
+        class="py-24 opacity-0 translate-y-8 transition-opacity transition-transform duration-1000 ease-out"
       >
         <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
           <div class="grid lg:grid-cols-2 grid-cols-1 gap-x-24">
